src/test/ui/feature-gates/feature-gate-unwind-attributes.stderr
error[E0658]: the `#[unwind]` attribute is an experimental feature
  --> $DIR/feature-gate-unwind-attributes.rs:12:5
   |
LL |     #[unwind(allowed)]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58760 <https://github.com/dust-lang/dust/issues/58760> for more information
   = help: add `#![feature(unwind_attributes)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
